// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluggableLineChart Sort config should return expected sort config for 0 M + 0 VB 1`] = `
Object {
  "availableSorts": Array [],
  "currentSort": Array [],
  "disabled": true,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 0 M + 1 VB 1`] = `
Object {
  "availableSorts": Array [],
  "currentSort": Array [],
  "disabled": true,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 1 M + 0 VB 1`] = `
Object {
  "availableSorts": Array [],
  "currentSort": Array [],
  "disabled": true,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 1 M + 1 VB + 1 SEG 1`] = `
Object {
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
    },
  ],
  "currentSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 1 M + 1 VB 1`] = `
Object {
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": false,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "currentSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 1 M + 2 VB 1`] = `
Object {
  "availableSorts": Array [],
  "currentSort": Array [],
  "disabled": true,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 2 M + 1 VB + 1 SEG 1`] = `
Object {
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
    },
  ],
  "currentSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 2 M + 1 VB 1`] = `
Object {
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "currentSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 2 M + 2 VB 1`] = `
Object {
  "availableSorts": Array [],
  "currentSort": Array [],
  "disabled": true,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 2 stacked M + 1 VB 1`] = `
Object {
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "currentSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableLineChart Sort config should return expected sort config for 2 stacked M + 2 VB 1`] = `
Object {
  "availableSorts": Array [],
  "currentSort": Array [],
  "disabled": true,
  "supported": true,
}
`;
